# kobold_cli

./: Cargo.toml  README.md
src/: main.rs
src/cli/: command.rs  history.rs  mod.rs
src/files/: mod.rs  parse.rs  preprocess.rs
src/parse/: mod.rs  parse.rs  preprocess.rs
src/server/: mod.rs
