[package]
name = "kobold_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
# bytes = "1.1"
# futures = "0.3"

# anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
