[package]
name = "kobold_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

rand = "0.8"
rustyline = "12" # Create command line interface 
libc = "0.2"
radix_trie = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Serialize and deserialize data from server
serde_yaml = "0.9" # Parse yaml data from files

anyhow = { version = "1", features = ["backtrace"] }
